--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./style.css" rel="stylesheet" />
 
-    <title>Vite + React</title>
+    <title>Patrick Dutra</title>
   </head>
   <body>
     <div id="root"></div>
